# esp32_do_it

./: .gitignore  BOARDS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  HARDWARE_TEST.md  I2C_MASTER_MIGRATION.md  LGFX_RGB_STATUS.md  LOVYANGFX_INTEGRATION.md  README.md  TASKS.md  reconfig.ps1  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3_ili9341  sdkconfig.defaults.esp32s3_ili9341_lgfx  sdkconfig.defaults.esp32s3_lgfx_7inch  sdkconfig.defaults.esp32s3_rgb  sdkconfig.defaults.esp32s3_rgb_7inch
.claude/: settings.local.json
Tasks/Done/: click-behavior.md
docs/: ARCHITECTURE.md  DETAILED_ARCHITECTURE.md  MODULES.md  TECH_NOTES.md  TRACKPAD.md  TRACKPAD_INTEGRATION_GUIDE.md  TRACKPAD_TESTING.md
docs/archive/: LGFX_SETUP_SUMMARY.md
main/: CMakeLists.txt  Kconfig.projbuild  app_display_ili9341.c  app_display_ili9341.h  app_display_lgfx.cpp  app_display_lgfx.h  app_display_rgb.c  app_display_rgb.h  app_hid.h  app_hid_gamepad.c  app_hid_gamepad.h  app_hid_macropad.c  app_hid_macropad.h  app_hid_trackpad.c  app_hid_trackpad.h  app_lvgl.c  app_lvgl.h  app_touch_ft6x36.c  app_touch_ft6x36.h  app_touch_gt911.c  app_touch_gt911.h  app_trackpad.c  app_trackpad.h  display_ili9341.c  hello_world_main.c  hw_display_test.c  hw_display_test.h  idf_component.yml  lgfx_auto_config.hpp  main.c  touch_ft6x36.c  trackpad_gesture.c  trackpad_gesture.cpp  trackpad_gesture.h  trackpad_gesture.hpp  ui_gamepad.c  ui_gamepad.h  ui_hwtest.c  ui_hwtest.h  ui_macropad.c  (+3 more)
test/: CMakeLists.txt  README.md  test_trackpad_gesture.c  trackpad_test_helper.c  trackpad_test_helper.h
